--- a/src/interview/interview/Views/Home/Index.cshtml
+++ b/src/interview/interview/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Front-end Interview</h1>
+    <p>Projeto de sistema de quiz desenvolvido durante o 3 ciclo do curso de Sistemas para Internet da PUC Minas</p>
 </div>
