--- a/src/interview/interview/Views/Shared/_Layout.cshtml
+++ b/src/interview/interview/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Quizs" asp-action="Index">Quizzes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                        </li>
                     </ul>
                 </div>
             </div>
