--- a/src/interview/interview/Views/Usuarios/Login.cshtml
+++ b/src/interview/interview/Views/Usuarios/Login.cshtml
@@ -9,6 +9,10 @@
 
 <hr />
 <div class="row">
+    @if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">@TempData["SuccessMessage"]</div>
+}
     <div class="col-md-4">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -34,6 +38,7 @@
             </div>*@
             <div class="form-group">
                 <input type="submit" value="log-in" class="btn btn-primary" />
+                <a asp-action="Create">Cadastrar</a>
             </div>
         </form>
 
