Criação do model controle veiw do score

--- a/src/interview/interview/Views/Shared/_Layout.cshtml
+++ b/src/interview/interview/Views/Shared/_Layout.cshtml
@@ -23,10 +23,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Quizs" asp-action="Index">Quizzes</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Scores" asp-action="Index">Score</a>
                             </li>
                             @if (User.IsInRole("Admin"))
                             {
