--- a/src/interview/interview/Views/Shared/_Layout.cshtml
+++ b/src/interview/interview/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Respostas" asp-action="Index">Respostas</a>
+                                </li>
                             }
                         }
                     </ul>
