Adiciona QuizViewModel e metodos no controler para gerar o quiz

--- a/src/interview/interview/Views/Quizs/Index.cshtml
+++ b/src/interview/interview/Views/Quizs/Index.cshtml
@@ -1,36 +1,16 @@
-﻿@model IEnumerable<interview.Models.Quiz>
+﻿@model IEnumerable<interview.Models.Tema>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h2>Escolha um tema</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@foreach (var item in Model)
+{
+    <a asp-controller="Quizs" asp-action="SelectTheme" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Titulo)</a>
 }
-    </tbody>
-</table>
+ 
+
+
